--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		  flex: 50%;
 		  padding: 5px;
 		}
-		.target span {
+		.target span, .new_target span {
 		  position:relative;
 		  display:inline-block;
 		  transform-origin:left;
@@ -57,7 +57,7 @@
 					<span style="color: #004061;font-size:55px;" id="target1">SCReAMINGGGGGGGGGGGGGGGGGG</span>
 				</div>
 				<div class="new_target scroll-text" id="new_target" style="display:inline-block;">
-					<span id="new_target1">SCReAMING SOON&emsp;</span>
+					<span id="new_target1">SCReAMING&nbsp;SOON&emsp;</span>
 				</div>
 			</div>
 		</div>
