--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		}
 		body {
 		  font-family: 'KochaRough', serif;
+		  overflow: hidden;
 		}
 		.total-box {
 			background-color:#edcfc6;
@@ -53,10 +54,10 @@
 				<img src="cone1.png" style="z-index:2;display:block; margin: auto;top:-20%;max-height: 130%;position: relative;">
 			</div>
 			<div style="position:absolute; height: 200px;top:60%;">
-				<div class="target" id="target" style="display:inline-block;">
-					<span style="color: #004061;font-size:55px;" id="target1">SCReAMINGGGGGGGGGGGGGGGGGG</span>
+				<div class="target" id="target" style="display:inline-flex;">
+					<span style="color: #004061;font-size:55px;" id="target1">SCReAMINGGGGGGGGGGGGGGGGGGGGGGGGGG</span>
 				</div>
-				<div class="new_target scroll-text" id="new_target" style="display:inline-block;">
+				<div class="new_target scroll-text" id="new_target" style="display:inline-flex;">
 					<span id="new_target1">SCReAMING&nbsp;SOON&emsp;</span>
 				</div>
 			</div>
@@ -77,7 +78,7 @@
 		  width = 1000,
 		  height = 300;
 		target.innerHTML = document.querySelector('#target1').innerText.split('').map(
-			(char) => `<span style="color: #004061;font-size:72px;">${char}</span>`
+			(char) => `<span style="color: #004061;font-size:71px;">${char}</span>`
 		).join('');
 
 		Array.prototype.forEach.call(target.children, (el) => {
@@ -104,6 +105,18 @@
 		  height = 300;
 		  otherText = document.querySelector('#new_target1').innerText;
 		target.innerHTML = ''
+		target.innerHTML += otherText.split('').map(
+			(char) => `<span style="color: #ff0020;font-size:18px;" class="empty-class">${char}</span>`
+		).join('');
+		// target.innerHTML += '<span style="padding-left:20px;padding-right:20px;"></span>'
+		target.innerHTML += otherText.split('').map(
+			(char) => `<span style="color: #ff0020;font-size:18px;" class="empty-class">${char}</span>`
+		).join('');
+		// target.innerHTML += '<span style="padding-left:20px;padding-right:20px;"></span>'
+		target.innerHTML += otherText.split('').map(
+			(char) => `<span style="color: #ff0020;font-size:18px;" class="empty-class">${char}</span>`
+		).join('');
+		// target.innerHTML += '<span style="padding-left:20px;padding-right:20px;"></span>'
 		target.innerHTML += otherText.split('').map(
 			(char) => `<span style="color: #ff0020;font-size:18px;" class="empty-class">${char}</span>`
 		).join('');
