--- a/index.html
+++ b/index.html
@@ -53,11 +53,12 @@
 			<div class="column">
 				<img src="cone1.png" style="z-index:2;display:block; margin: auto;top:-20%;max-height: 130%;position: relative;">
 			</div>
-			<div style="position:absolute; height: 200px;top:60%;">
-				<div class="target" id="target" style="display:inline-flex;">
+			<div style="position:absolute; height: 200px;top:10%;">
+				<img src="coming.png" style=""></img>
+				<div class="target" id="target" style="display:inline-flex;display: none;">
 					<span style="color: #004061;font-size:55px;" id="target1">SCReAMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM</span>
 				</div>
-				<div class="new_target scroll-text" id="new_target" style="display:inline-flex;">
+				<div class="new_target scroll-text" id="new_target" style="display:inline-flex;margin-top:30px">
 					<span id="new_target1">SCReAMING&nbsp;SOON&emsp;</span>
 				</div>
 			</div>
@@ -106,9 +107,9 @@
 			easing = Math.easeInOutSine,
 		  target = document.querySelector('#new_target'),
 			bbox = target.getBoundingClientRect(),
-			left = 350,
-		  width = 1000,
-		  height = 300;
+			left = 370,
+		  width = 1300,
+		  height = 450;
 		  otherText = document.querySelector('#new_target1').innerText;
 		target.innerHTML = ''
 		target.innerHTML += otherText.split('').map(
