--- a/index.html
+++ b/index.html
@@ -113,43 +113,103 @@
 		  otherText = document.querySelector('#new_target1').innerText;
 		target.innerHTML = ''
 		target.innerHTML += otherText.split('').map(
-			(char) => `<span style="color: #ff0020;font-size:18px;" class="empty-class">${char}</span>`
+			function(char, i){ 
+				if (char == 'R'){
+					return `<span style="color: #ff0020;font-size:18px;" class="empty-class">Re</span>`;
+				} else if (char != 'e') {
+					return `<span style="color: #ff0020;font-size:18px;" class="empty-class">${char}</span>`;
+				}
+			}
 		).join('');
 		// target.innerHTML += '<span style="padding-left:20px;padding-right:20px;"></span>'
 		target.innerHTML += otherText.split('').map(
-			(char) => `<span style="color: #ff0020;font-size:18px;" class="empty-class">${char}</span>`
+			function(char, i){ 
+				if (char == 'R'){
+					return `<span style="color: #ff0020;font-size:18px;" class="empty-class">Re</span>`;
+				} else if (char != 'e') {
+					return `<span style="color: #ff0020;font-size:18px;" class="empty-class">${char}</span>`;
+				}
+			}
 		).join('');
 		// target.innerHTML += '<span style="padding-left:20px;padding-right:20px;"></span>'
 		target.innerHTML += otherText.split('').map(
-			(char) => `<span style="color: #ff0020;font-size:18px;" class="empty-class">${char}</span>`
+			function(char, i){ 
+				if (char == 'R'){
+					return `<span style="color: #ff0020;font-size:18px;" class="empty-class">Re</span>`;
+				} else if (char != 'e') {
+					return `<span style="color: #ff0020;font-size:18px;" class="empty-class">${char}</span>`;
+				}
+			}
 		).join('');
 		// target.innerHTML += '<span style="padding-left:20px;padding-right:20px;"></span>'
 		target.innerHTML += otherText.split('').map(
-			(char) => `<span style="color: #ff0020;font-size:18px;" class="empty-class">${char}</span>`
+			function(char, i){ 
+				if (char == 'R'){
+					return `<span style="color: #ff0020;font-size:18px;" class="empty-class">Re</span>`;
+				} else if (char != 'e') {
+					return `<span style="color: #ff0020;font-size:18px;" class="empty-class">${char}</span>`;
+				}
+			}
 		).join('');
 		// target.innerHTML += '<span style="padding-left:20px;padding-right:20px;"></span>'
 		target.innerHTML += otherText.split('').map(
-			(char) => `<span style="color: #ff0020;font-size:18px;" class="empty-class">${char}</span>`
+			function(char, i){ 
+				if (char == 'R'){
+					return `<span style="color: #ff0020;font-size:18px;" class="empty-class">Re</span>`;
+				} else if (char != 'e') {
+					return `<span style="color: #ff0020;font-size:18px;" class="empty-class">${char}</span>`;
+				}
+			}
 		).join('');
 		// target.innerHTML += '<span style="padding-left:20px;padding-right:20px;"></span>'
 		target.innerHTML += otherText.split('').map(
-			(char) => `<span style="color: #ff0020;font-size:18px;" class="empty-class">${char}</span>`
+			function(char, i){ 
+				if (char == 'R'){
+					return `<span style="color: #ff0020;font-size:18px;" class="empty-class">Re</span>`;
+				} else if (char != 'e') {
+					return `<span style="color: #ff0020;font-size:18px;" class="empty-class">${char}</span>`;
+				}
+			}
 		).join('');
 		// target.innerHTML += '<span style="padding-left:20px;padding-right:20px;"></span>'
 		target.innerHTML += otherText.split('').map(
-			(char) => `<span style="color: #ff0020;font-size:18px;" class="empty-class">${char}</span>`
+			function(char, i){ 
+				if (char == 'R'){
+					return `<span style="color: #ff0020;font-size:18px;" class="empty-class">Re</span>`;
+				} else if (char != 'e') {
+					return `<span style="color: #ff0020;font-size:18px;" class="empty-class">${char}</span>`;
+				}
+			}
 		).join('');
 		// target.innerHTML += '<span style="padding-left:20px;padding-right:20px;"></span>'
 		target.innerHTML += otherText.split('').map(
-			(char) => `<span style="color: #ff0020;font-size:18px;" class="empty-class">${char}</span>`
+			function(char, i){ 
+				if (char == 'R'){
+					return `<span style="color: #ff0020;font-size:18px;" class="empty-class">Re</span>`;
+				} else if (char != 'e') {
+					return `<span style="color: #ff0020;font-size:18px;" class="empty-class">${char}</span>`;
+				}
+			}
 		).join('');
 		// target.innerHTML += '<span style="padding-left:20px;padding-right:20px;"></span>'
 		target.innerHTML += otherText.split('').map(
-			(char) => `<span style="color: #ff0020;font-size:18px;" class="empty-class">${char}</span>`
+			function(char, i){ 
+				if (char == 'R'){
+					return `<span style="color: #ff0020;font-size:18px;" class="empty-class">Re</span>`;
+				} else if (char != 'e') {
+					return `<span style="color: #ff0020;font-size:18px;" class="empty-class">${char}</span>`;
+				}
+			}
 		).join('');
 		// target.innerHTML += '<span style="padding-left:20px;padding-right:20px;"></span>'
 		target.innerHTML += otherText.split('').map(
-			(char) => `<span style="color: #ff0020;font-size:18px;" class="empty-class">${char}</span>`
+			function(char, i){ 
+				if (char == 'R'){
+					return `<span style="color: #ff0020;font-size:18px;" class="empty-class">Re</span>`;
+				} else if (char != 'e') {
+					return `<span style="color: #ff0020;font-size:18px;" class="empty-class">${char}</span>`;
+				}
+			}
 		).join('');
 
 		Array.prototype.forEach.call(target.children, (el) => {
