--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
 				<img src="cone1.png" style="z-index:2;display:block; margin: auto;top:-20%;max-height: 130%;position: relative;">
 			</div>
 			<div style="position:absolute; height: 200px;top:10%;">
-				<img src="coming.png" style=""></img>
+				<img src="coming1.png" style=""></img>
 				<div class="target" id="target" style="display:inline-flex;display: none;">
 					<span style="color: #004061;font-size:55px;" id="target1">SCReAMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM</span>
 				</div>
-				<div class="new_target scroll-text" id="new_target" style="display:inline-flex;margin-top:30px">
+				<div class="new_target scroll-text" id="new_target" style="display:inline-flex;margin-top:30px;display: none;">
 					<span id="new_target1">SCReAMING&nbsp;SOON&emsp;</span>
 				</div>
 			</div>
@@ -238,7 +238,7 @@
         container.find('span.empty-class:last').text(text);
       }
       
-      // setInterval(updateText, 150); // Adjust the interval as needed (in milliseconds)
+      setInterval(updateText, 150); // Adjust the interval as needed (in milliseconds)
     });
 	</script>
 </body>
