--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@
 <body>
 	<div class="total-box">
 		<div class="">
-			<img src="scream-logo.png" style="margin-left:32px;margin-top:32px;width:200px;">
+			<img src="scream-logo.png" style="margin-left:54px;margin-top:50px;width:275px;">
 		</div>
 		<div class="row">
 			<div class="column">
-				<img src="e-logo.png" style="display:block; margin: auto;max-width: 130px;">
+				<img src="e-logo.png" style="display:block;margin: auto;max-width: 250px;margin-top: 54px;padding-left: 200px;">
 			</div>
 			<div class="column">
-				<img src="cone1.png" style="z-index:2;display:block; margin: auto;top:-20%;max-height: 130%;position: relative;">
+				<img src="cone1.png" style="z-index:2;display:block; margin: auto;top:-25%;max-height: 130%;position: relative;">
 			</div>
 			<div style="position:absolute; height: 200px;top:10%;">
 				<!-- <img src="coming.png" style=""></img> -->
@@ -65,7 +65,7 @@
 			</div>
 		</div>
 		<div>
-			<a href="#"><img src="social-icons.png" style="float:right;margin-right:32px;margin-bottom:32px;position: relative; z-index: 2;"></a>
+			<a href="#"><img src="social-icons.png" style="float:right;margin-right:32px;margin-bottom:32px;position: relative; z-index: 2;top:-40px;"></a>
 		</div>
 	</div>
 
